--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title, description = "A simple blog with RSS feed" } = Astro.props;
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&family=IBM+Plex+Sans:wght@400;500;600&display=swap"
       rel="stylesheet">
   </head>
-  <body class="ibm-plex-sans-regular pv4 flex flex-column items-center justify-between ba min-vh-100">
+  <body class="ibm-plex-sans-regular pv4 ph3 flex flex-column items-center justify-between min-vh-100">
     <div class="f5 measure-wide w-100 flex-auto mt4">
       <div class="flex justify-between items-center ibm-plex-sans-regular">
         <a href="/" class="no-underline black">
