--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,12 +28,12 @@ const { title, description = "A simple blog with RSS feed" } = Astro.props;
     <div class="f5 measure-wide w-100 flex-auto mt4">
       <div class="flex justify-between items-center ibm-plex-sans-regular">
         <a href="/" class="no-underline black">
-        <h1 class="f6 fw3 mv0"><span class="ibm-plex-sans-medium">Niko Lazaris</span> <span class="f7 h1">✤</span> your friendly neighborhood dev</h1>
+        <h1 class="f6 fw3 mv0"><span class="ibm-plex-sans-medium">Niko Lazaris</span> <span class="f7 h1">✤</span> friendly neighborhood dev</h1>
         </a>
         <nav>
           <div class="flex items-center">
-            <a class="f6 mh1" href="/about" class="">About</a>
-            <a class="f6 mh1" href="/rss.xml">RSS</a>
+            <a class="f7 mh1" href="/about" class="">About</a>
+            <a class="f7 mh1" href="/rss.xml">RSS</a>
           </div>
         </nav>
       </div>
