--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,11 +6,11 @@ import Layout from '../layouts/Layout.astro';
   <div class="flex items-center justify-between mt4 mb2">
     <h1 class="f5 mv0">About me</h1>
     <div class="flex f6 items-center justify-center">
-      <a class="near-black hover-no-underline" href="https://github.com/nlaz">github</a>
+      <a class="near-black hover-no-underline" href="https://github.com/nlaz">gh</a>
       <span class="f7 mh1"></span>
-      <a class="near-black" href="https://nlaz.bsky.social">bluesky</a>
+      <a class="near-black" href="https://nlaz.bsky.social">bs</a>
       <span class="f7 mh1"></span>
-      <a class="near-black" href="https://www.instagram.com/nikolazaris">gram</a>
+      <a class="near-black" href="https://www.instagram.com/nikolazaris">ig</a>
     </div>
   </div>
   <p>
