--- a/public/styles.css
+++ b/public/styles.css
@@ -45,6 +45,16 @@ h1 {
   font-weight: 500;
 }
 
+h2 {
+  margin-top: 1rem;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+br {
+  height: .5rem;
+}
+
 ul {
   margin-top: 0.5rem;
   list-style-type: circle;
