--- a/public/styles.css
+++ b/public/styles.css
@@ -39,13 +39,7 @@ body {
   font-style: normal;
 }
 
-h1 {
-  margin-top: 1.5rem;
-  font-size: 1rem;
-  font-weight: 500;
-}
-
-h2 {
+h1, h2, h3, h4 {
   margin-top: 1rem;
   font-size: 1rem;
   font-weight: 500;
@@ -61,10 +55,51 @@ ul {
   padding-left: 1rem;
 }
 
-p, li {
+p, li, table {
   font-size: 0.875rem;
 }
 
 p {
   line-height: 1.25;
+}
+
+hr {
+    margin: 28px 0;
+}
+
+pre {
+  padding: 1rem 1rem;
+  padding-bottom: 1.5rem;
+  background-color: #1e1e1e !important;
+}
+
+code {
+  font-family: 'IBM Plex Mono', monospace;
+  font-size: 0.875rem;
+}
+
+pre code {
+  font-family: 'IBM Plex Mono', monospace;
+  font-size: 12px;
+  line-height: 1.5;
+}
+
+strong, th {
+    font-weight: 500;
+}
+
+td {
+    padding: 3px 6px;
+}
+
+h1 {
+    margin-top: 1.5rem;
+}
+
+ul {
+    margin: 4px 0;
+}
+
+li {
+    line-height: 1.25;
 }
